Fix an issue with photo overflow
This only heppen after opening a link from the new tab page in another new tab and going to that new tab and back. After coming back, the #photo div would become scrollable for some reason

--- a/stylesheets/newtab.sass
+++ b/stylesheets/newtab.sass
@@ -13,6 +13,7 @@ body
   background-position: center
   background-size: cover
   background-repeat: no-repeat
+  overflow: hidden
 
 #photo-footer
   position: absolute
